--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,4 +9,14 @@ dependencies = [
     "mcp[cli]>=1.11.0",
     "praw>=7.7.0",
     "python-dotenv>=1.0.0",
+    "spacy>=3.7.0",
+    "numpy>=1.24.0",
+]
+
+[project.optional-dependencies]
+test = [
+    "pytest>=7.0.0",
+    "pytest-asyncio>=0.21.0",
+    "pytest-mock>=3.10.0",
+    "pytest-cov>=4.0.0",
 ]
